[package]
name = "paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
rustc_version = { version = "0.4.0", optional = true }


[package.metadata.rust-analyzer]
rustc_private=true