[package]
name = "paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_version = { version = "0.4.0", optional = true }
rustc-hash = "1.1.0"


[package.metadata.rust-analyzer]
rustc_private=true